welcome.lessons.welcome.variables.Variables.scala.code
var nbPas=0;
var dejaFait=0;



while (!est SurBiscuit)
{
	avance()
	nbPas=nbPas +1;
}
if ( estSurBiscuit)
{
	prendBiscuit()
	porteBiscuit()
	
	while( dejaFait!=nbPas)
	{
		recule()
	}
}
